--- a/MainPage.html
+++ b/MainPage.html
@@ -15,98 +15,84 @@
     <body>
         <nav>
             <div class="nav-wrapper">
-              <a href="#" class="brand-logo">Bienvenue chez moi !</a>
+              <a href="#" class="brand-logo">La maison</a>
+              <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="MainPage.html">La maison</a></li>
                 <li><a href="PresentationRegion.html">La région</a></li>
                 <li><a href="Inscription.html">Réservation</a></li>
               </ul>
+              <ul class="side-nav" id="mobile-demo">
+                  <li><a href="MainPage.html">La maison</a></li>
+                  <li><a href="PresentationRegion.html">La région</a></li>
+                  <li><a href="Inscription.html">Réservation</a></li>
+                </ul>
             </div>
           </nav>
+          
           <h2>Venez passer un séjour atypique dans une maison pas comme les autres.</h2>
           <p>Nichée en plein Paris, ma maison vous propose :
           </p>
-          <div class="row">
-              <div class="col s12 m7">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="maisonDeCharme.jpg">
-                    <span class="card-title">Le charme de l'ancien.</span>
-                  </div>
-                  <div class="card-content">
-                    <p>Attention peinture fraîche.</p>
-                  </div>
-                </div>
+          <div class="parallax-container">
+              <div class="parallax"><img src="maisonDeCharme.jpg"></div>
+            </div>
+            <div class="section white">
+              <div class="row container">
+                <h3 class="header">Le charme de l'ancien</h3>
+                <p class="grey-text text-darken-3 lighten-3">Attention ! Peinture fraîche.</p>
               </div>
             </div>
-                <div class="row">
-                    <div class="col s12 m7">
-                      <div class="card">
-                        <div class="card-image">
-                          <img src="spa.jpg">
-                          <span class="card-title">Un spa unique au monde.</span>
-                        </div>
-                        <div class="card-content">
-                          <p>Pensez à vous faire vacciner avant de venir...</p>
-                        </div>
-                      </div>
+            <div class="parallax-container">
+              <div class="parallax"><img src="spa.jpg"></div>
+            </div>
+            <div class="section white">
+                <div class="row container">
+                  <h3 class="header">Un spa unique au monde.</h3>
+                  <p class="grey-text text-darken-3 lighten-3">Pensez à vous faire vacciner avant de venir...</p>
+                </div>
+              </div>
+              <div class="parallax-container">
+                      <div class="parallax"><img src="chambre.jpg"></div>
                     </div>
-                  </div>
-                  <div class="row">
-                      <div class="col s12 m7">
-                        <div class="card">
-                          <div class="card-image">
-                            <img src="chambre.jpg">
-                            <span class="card-title">Des chambres tout confort.</span>
-                          </div>
-                          <div class="card-content">
-                            <p>Et thématisées.</p>
-                          </div>
+                    <div class="section white">
+                        <div class="row container">
+                          <h3 class="header">Des chambres tout confort.</h3>
+                          <p class="grey-text text-darken-3 lighten-3">Et thématisées.</p>
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m7">
-                          <div class="card">
-                            <div class="card-image">
-                              <img src="Dressing.jpg">
-                              <span class="card-title">De grands dressing, pour toutes vos affaires.</span>
-                            </div>
-                            <div class="card-content">
-                              <p>Intimité et sécurité garanties.</p>
+                      <div class="parallax-container">
+                          <div class="parallax"><img src="Dressing.jpg"></div>
+                        </div>
+                        <div class="section white">
+                            <div class="row container">
+                              <h3 class="header">De grands dressing, pour toutes vos affaires.</h3>
+                              <p class="grey-text text-darken-3 lighten-3">Intimité et sécurité garanties.</p>
                             </div>
                           </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                          <div class="col s12 m7">
-                            <div class="card">
-                              <div class="card-image">
-                                <img src="animalDeC.jpg">
-                                <span class="card-title">Chaque chambre est équipée d'un incroyable bassin.</span>
-                              </div>
-                              <div class="card-content">
-                                <p>Il faut aimer les animaux exotiques. </br>
-Nous rappelons que la maison acceptes les animaux domestiques...
-                                </p>
-                              </div>
+                          <div class="parallax-container">
+                              <div class="parallax"><img src="animalDeC.jpg"></div>
                             </div>
-                          </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s12 m7">
-                              <div class="card">
-                                <div class="card-image">
-                                  <img src="petitDej.jpg">
-                                  <span class="card-title">Le petit déjeuner (hyperprotéiné) est inclu.</span>
-                                </div>
-                                <div class="card-content">
-                                  <p>Amis vegans, nous ne pourrons pas vous satisfaire...
-                                  </p>
+                            <div class="section white">
+                                <div class="row container">
+                                  <h3 class="header">Chaque chambre est équipée d'un incroyable bassin.</h3>
+                                  <p class="grey-text text-darken-3 lighten-3">Il faut aimer les animaux exotiques. </br>
+                                    Nous rappelons que la maison acceptes les animaux domestiques...</p>
                                 </div>
                               </div>
-                            </div>
-                          </div>
-      <p>Nous propoons également ces quelques activités en extra :</p>
+                              <div class="parallax-container">
+                                  <div class="parallax"><img src="petitDej.jpg"></div>
+                                </div>
+                                <div class="section white">
+                                    <div class="row container">
+                                      <h3 class="header">Le petit déjeuner (hyperprotéiné) est inclu.</h3>
+                                      <p class="grey-text text-darken-3 lighten-3">Amis vegans, nous ne pourrons pas vous satisfaire...</p>
+                                    </div>
+                                  </div>
+                                  <div class="section white">
+                                      <div class="row container">
+                                        <h4 class="header">Nous proposons également ces quelques activités en extra :</h4>
+                                      </div>
+                                    </div>
                       <div class="slider">
                           <ul class="slides">
                             <li>
@@ -148,11 +134,22 @@ Nous rappelons que la maison acceptes les animaux domestiques...
                                 </ul>
                               </div>
                               <div>
-
-        <p>En venant chez moi, vous découvrirez une <a href="PresentationRegion.html"> région  </a> riche et variée.</p>
-        <p>Alors n'attendez pas, <a href="Inscription.html"> créez vite un compte  </a>, afin de réserver un séjour inoubliable. </p>
-        <p>Pour de plus amples informations </br>
-            <a href="mailto:machin@truc.com">Cliquez là !</a>  </p> 
+                                  <div class="section white">
+                                      <div class="row container">
+                                        <h5 class="header">En venant chez moi, vous découvrirez une <a href="PresentationRegion.html"> région  </a> riche et variée.</h5>
+                                      </div>
+                                    </div>
+                                    <div class="section white">
+                                        <div class="row container">
+                                          <h5 class="header">Alors n'attendez pas, <a href="Inscription.html"> créez vite un compte  </a>, afin de réserver un séjour inoubliable.</h5>
+                                        </div>
+                                      </div>
+                                      <div class="section white">
+                                          <div class="row container">
+                                            <h5 class="header">Pour de plus amples informations </br>
+                                              <a href="mailto:machin@truc.com">Cliquez là !</a> </h5>
+                                          </div>
+                                        </div> 
             <div>
                 <p><input type="image" id="monBouton" value="remonter" src="back-to-top-squelette.jpg" alt="Remonter" style="text-align:center; width:100px" BORDER="0"></p>
                 
