--- a/PresentationRegion.html
+++ b/PresentationRegion.html
@@ -15,33 +15,53 @@
     <body>
         <nav>
             <div class="nav-wrapper">
-              <a href="#" class="brand-logo">Une région assez connue recelant pourtant de merveilles insoupçonnées !</a>
+              <a href="#" class="brand-logo">La région</a>
+              <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="MainPage.html">Présentation des lieux</a></li>
+                <li><a href="MainPage.html">La maison</a></li>
+                <li><a href="PresentationRegion.html">La région</a></li>
                 <li><a href="Inscription.html">Réservation</a></li>
               </ul>
+              <ul class="side-nav" id="mobile-demo">
+                  <li><a href="MainPage.html">La maison</a></li>
+                  <li><a href="PresentationRegion.html">La région</a></li>
+                  <li><a href="Inscription.html">Réservation</a></li>
+                </ul>
             </div>
           </nav>
-         <p>Si je vous parle de l'Ile de France, vous allez me dites :      
-        </p>
-        <ul>
-            <li>Disneyland   </li>
-            <li>Versailles</li>
-            <li>Le Louvres</li>
-            <li>Notre-Dame de Paris</li>
-        </ul>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YgZ--t4hVVo?rel=0" frameborder="0" allowfullscreen></iframe>
-        <p>Mais tout cela fait très cliché. </br>
-            Ce que je vous propose, c'est tout ce que l'on refuse de voir.</br>
-        Je vous propose quelques images qui parleront plus que de long discours :</p>
-        <!-- Vous mettez  des vidéos de votre région-->
+          <div class="section white">
+              <div class="row container">
+                <h4 class="header">Si vous me parliez de l'Ile de France, j'aurais probablement droit à : </br>
+                  <ul>
+                      <li>Disneyland   </li>
+                      <li>Versailles</li>
+                      <li>Le Louvres</li>
+                      <li>Notre-Dame de Paris</li>
+                      <li>Etc...</li>
+                  </ul> </h4>
+              </div>
+            </div>
+             <Center> <div class="section white">
+                  <div class="row container">
+                    <h4 class="header">Ça, en gros... </h4>
+                  </div>
+                    </div></Center>
+                    <Center>
+        <iframe width="800" height="400" src="https://www.youtube.com/embed/YgZ--t4hVVo?rel=0" frameborder="0" allowfullscreen></iframe></Center>
+        <div class="section white">
+            <div class="row container">
+              <h4 class="header">Mais tout cela fait très cliché. </br>
+                Ce que je vous propose, c'est tout ce que l'on refuse de voir.</br>
+            Je vous propose quelques images qui parleront plus que de long discours :</h4>
+            </div>
+          </div>
   <div class="slider">
     <ul class="slides">
       <li>
         <img src="graffParis.jpg" > 
         <div class="caption center-align">
                 <h3>Des musées en plein air !</h3>
-                
+
               </div>
             </li>
             <li> <img src="ARTICLE-PARIS-20-511.jpg"> 
@@ -50,7 +70,7 @@
                         <div class="caption center-align"></li>
                            <li> <img src="musée2.jpg"> 
                                 <div class="caption center-align">
-                                  <h5 class="light grey-text text-lighten-3">Etonnant, non ?</h5>
+                                  <h3 class="light grey-text text-lighten-3">Etonnant, non ?</h3>
                                 </div>
             <li>
               <img src="pote1.jpg"> 
@@ -70,7 +90,7 @@
               <img src="transports.jpg"> 
               <div class="caption center-align">
                 
-                <h5 class="light grey-text text-lighten-3">Ou pas...</h5>
+                <h3 class="light grey-text text-lighten-3">Ou pas...</h3>
               </div>
             </li>
           </ul>
