Changement de MainPage.html en index.html

--- a/PresentationRegion.html
+++ b/PresentationRegion.html
@@ -18,12 +18,12 @@
               <a href="#" class="brand-logo">La région</a>
               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="MainPage.html">La maison</a></li>
+                <li><a href="index.html">La maison</a></li>
                 <li><a href="PresentationRegion.html">La région</a></li>
                 <li><a href="Inscription.html">Réservation</a></li>
               </ul>
               <ul class="side-nav" id="mobile-demo">
-                  <li><a href="MainPage.html">La maison</a></li>
+                  <li><a href="index.html">La maison</a></li>
                   <li><a href="PresentationRegion.html">La région</a></li>
                   <li><a href="Inscription.html">Réservation</a></li>
                 </ul>
