--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/MainPage.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="css/index.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,12 +18,12 @@
               <a href="#" class="brand-logo">La maison</a>
               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="MainPage.html">La maison</a></li>
+                <li><a href="index.html">La maison</a></li>
                 <li><a href="PresentationRegion.html">La région</a></li>
                 <li><a href="Inscription.html">Réservation</a></li>
               </ul>
               <ul class="side-nav" id="mobile-demo">
-                  <li><a href="MainPage.html">La maison</a></li>
+                  <li><a href="index.html">La maison</a></li>
                   <li><a href="PresentationRegion.html">La région</a></li>
                   <li><a href="Inscription.html">Réservation</a></li>
                 </ul>
